# opsynca

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  litellm_config.yaml  main.py  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  terraform.yml
api/: CLAUDE.md  __init__.py  config.py  litellm_client.py  main.py  pyproject.toml
api/jobs/: aggregate.py  cv_keywords.py  matching.py  router.py  schemas.py  text_match.py
api/jobs/connectors/: arbeitnow.py  careerjet.py  himalayas.py  jobicy.py  jooble.py  remoteok.py  themuse.py
api/rag/: extract_file_contents.py  extraction_common.py  local_embedder.py  media_extractors.py  office_extractors.py  processing.py  qdrant_store.py  router.py  schemas.py  text_extractors.py
api/static/: index.html
api/static/assets/: main-BlmtruO7.js  main-CmuwIy8Q.css  main-CwEyekcR.js  main-DQbokOcL.css
docs/: azure-low-cost-deployment.md  cv-project-entry.md  logical.drawio
frontend/: CLAUDE.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.scripts.json  vite.config.ts  vitest.config.ts
frontend/public/: portfolio-index.json  robots.txt  sitemap.xml  staticwebapp.config.json
frontend/scripts/: precompute-index.ts
frontend/src/: Router.tsx  api.ts  chunking.test.ts  chunking.ts  main.tsx  storage.test.ts  storage.ts  styles.css  types.ts  useTheme.ts  utils.test.ts  utils.ts  vectorSearch.test.ts  vectorSearch.ts
frontend/src/apps/: RagApp.tsx
frontend/src/components/: ChatPanel.tsx  ConversationsPanel.tsx  DocumentsPanel.tsx  NotFound.tsx  StatusLine.tsx  ThemeToggle.tsx
frontend/src/jobs/: JobsView.tsx  jobs.css  jobsStore.ts
frontend/src/portfolio/: PortfolioApp.tsx  chatContext.ts  (+5 more)
iac/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  tfplan  variables.tf  versions.tf
tests/: conftest.py  test_api.py  test_litellm_client.py  test_processing.py  test_router_helpers.py  test_schemas.py
(+35 files in other folders)
