[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "litellm[google,proxy]>=1.83.14",
    "prisma>=0.15.0",
    "pymupdf>=1.26.0",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.33.0",
]

[tool.uv.workspace]
members = [
    "api",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
