[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "litellm[google]>=1.83.14",
    "pymupdf>=1.26.0",
    "pypdf>=6.0.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.33.0",
]

[project.optional-dependencies]
# Embeddings locaux (opt-in via EMBEDDING_BACKEND=local). Hors de l'image prod
# par defaut : `uv sync --extra local-embed` pour les activer.
local-embed = [
    "fastembed>=0.8.0",
]

[tool.uv.workspace]
members = [
    "api",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
